<resources>
    <string name="app_name">My Price Watcher</string>
    <string name="visit_website">Visit Website</string>
    <string name="refresh">Refresh</string>
    <string name="broom">Broom</string>
    <string name="Remove">Remove</string>
    <string name="Edit">Edit</string>
    <string name="Add">Add</string>
    <string name="AddItem">Add Item</string>
    <string name="editName">Name:</string>
    <string name="editInitial">Initial Price:</string>
    <string name="editCurrent">Current Price:</string>
    <string name="editUrl">URL:</string>
    <string name="edit_item">Edit Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="refresh_all">Refresh All</string>
</resources>
