<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addEditItemActivity">

    <EditText
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Name"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/itemNameText"
        app:layout_constraintTop_toBottomOf="@+id/cancelButton" />

    <EditText
        android:id="@+id/initPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        android:text="0.00"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/initPriceText"
        app:layout_constraintTop_toBottomOf="@id/itemName" />

    <EditText
        android:id="@+id/curPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:inputType="numberDecimal"
        android:text="0.00"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/curPriceText"
        app:layout_constraintTop_toBottomOf="@id/initPrice" />

    <EditText
        android:id="@+id/itemUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:inputType="text"
        android:maxWidth="325dp"
        android:text="URL"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/itemUrlText"
        app:layout_constraintTop_toBottomOf="@id/curPrice" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/editName"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@+id/itemName"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/initPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/editInitial"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@+id/initPrice"
        tools:layout_editor_absoluteX="7dp" />

    <TextView
        android:id="@+id/curPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/editCurrent"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@+id/curPrice"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/itemUrlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/editUrl"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@+id/itemUrl"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>